--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -110,16 +110,15 @@
     </div>
     <% } %>
   </div>
-   <div class=" container-header ">
+    <div class=" container-header ">
             <div class="jumbotron hero-image  text-center mb-0" id="bg-image-text">
-              <h1 class=" text-center   heading-section welcome-heading">Bienvenidos  
+              <h1 class=" text-center    welcome-heading">Bienvenidos  
               </h1>
-              <strong><p class="text-center heading-section welcome-heading">a</p>
+              <strong><p class="text-center  welcome-heading ">a</p>
               </strong>
-              <h1 class=" text-center  welcome-heading heading-section notranslate">Baila Bollywood</h1>
+              <h1 class=" text-center   welcome-heading notranslate">Baila Bollywood</h1>
             </div>
           </div>
-
 
 
 
